# OpenBBTerminal

./: pyproject.toml  requirements-full.txt
