[tool.poetry]
name = "OpenBBTerminal"
version = "0.1.0"
description = ""
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
aiodns = "3.0.0"
aiohttp = "3.8.3"
aiosignal = "1.2.0"
alabaster = "0.7.12"
alpha-vantage = "2.3.1"
altair = "4.2.0"
anyio = "3.6.2"
appnope = "0.1.3"
arch = "5.3.1"
argon2-cffi-bindings = "21.2.0"
argon2-cffi = "21.3.0"
ascii-magic = "1.6"
astor = "0.8.1"
astroid = "2.12.12"
astropy = "5.1.1"
asttokens = "2.0.8"
async-timeout = "4.0.2"
atomicwrites = "1.4.1"
attrs = "21.4.0"
Babel = "2.10.3"
backcall = "0.2.0"
backoff = "2.2.1"
"backports.zoneinfo" = "0.2.1"
bandit = "1.7.4"
base58 = "2.1.1"
beartype = "0.7.1"
beautifulsoup4 = "4.11.1"
black = "22.10.0"
bleach = "5.0.1"
blinker = "1.5"
bs4 = "0.0.1"
bt = "0.2.9"
cachetools = "5.2.0"
ccxt = "1.95.43"
certifi = "2022.9.24"
cffi = "1.15.1"
cfgv = "3.3.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
codespell = "2.2.2"
colorama = "0.4.6"
commonmark = "0.9.1"
convertdate = "2.4.0"
coverage = "6.5.0"
cryptography = "38.0.2"
cssselect = "1.1.0"
cvxpy = "1.2.1"
cycler = "0.11.0"
Cython = "0.29.32"
dateparser = "1.1.2"
DateTime = "4.7"
debugpy = "1.6.3"
decorator = "5.1.1"
defusedxml = "0.7.1"
degiro-connector = "2.0.21"
deprecation = "2.1.0"
detecta = "0.0.5"
dill = "0.3.6"
distlib = "0.3.6"
dnspython = "2.2.1"
docutils = "0.17.1"
ecos = "2.0.10"
entrypoints = "0.4"
et-xmlfile = "1.1.0"
exchange-calendars = "4.2.3"
executing = "1.1.1"
fastjsonschema = "2.16.2"
feedparser = "6.0.10"
ffn = "0.3.6"
filelock = "3.8.0"
financedatabase = "1.0.2"
finnhub-python = "2.4.15"
finviz = "1.4.4"
finvizfinance = "0.14.4"
flake8 = "3.9.2"
fonttools = "4.38.0"
formulaic = "0.3.4"
fred = "3.1"
fredapi = "0.4.3"
frozendict = "2.3.4"
frozenlist = "1.3.1"
fundamentalanalysis = "0.2.14"
future = "0.18.2"
gitdb = "4.0.9"
GitPython = "3.1.29"
grpcio = "1.50.0"
h11 = "0.12.0"
hijri-converter = "2.2.4"
holidays = "0.14.2"
html5lib = "1.1"
httpcore = "0.15.0"
httpx = "0.23.0"
identify = "2.5.7"
idna = "3.4"
imagesize = "1.4.1"
importlib-metadata = "5.0.0"
inflection = "0.5.1"
iniconfig = "1.1.1"
interface-meta = "1.3.0"
investiny = "0.5.0"
investpy = "1.0.8"
ipyflex = "0.2.4"
ipykernel = "6.16.1"
ipympl = "0.8.8"
ipython_genutils = "0.2.0"
ipython = "8.5.0"
ipywidgets = "7.7.2"
iso8601 = "0.1.16"
isort = "5.10.1"
jedi = "0.18.1"
Jinja2 = "3.1.2"
joblib = "1.2.0"
json5 = "0.9.10"
jsonschema = "3.2.0"
jupyter-client = "7.4.3"
jupyter-console = "6.4.4"
jupyter-core = "4.11.2"
jupyter-server = "1.21.0"
jupyter = "1.0.0"
jupyterlab-pygments = "0.2.2"
jupyterlab-server = "2.16.1"
jupyterlab-widgets = "1.1.1"
jupyterlab = "3.5.0"
kiwisolver = "1.4.4"
korean-lunar-calendar = "0.3.1"
lazy-object-proxy = "1.7.1"
linearmodels = "4.27"
loguru = "0.6.0"
lxml = "4.9.1"
markdown-it-py = "1.1.0"
MarkupSafe = "2.1.1"
matplotlib-inline = "0.1.6"
matplotlib = "3.5.3"
mccabe = "0.6.1"
mdit-py-plugins = "0.2.8"
mistune = "0.8.4"
mock = "4.0.3"
more-itertools = "9.0.0"
mplfinance = "0.12.9b1"
multidict = "6.0.2"
multitasking = "0.0.11"
mypy-extensions = "0.4.3"
mypy = "0.930"
myst-parser = "0.15.2"
nbclassic = "0.4.5"
nbclient = "0.5.13"
nbconvert = "6.5.4"
nbformat = "5.7.0"
nbmake = "1.3.0"
nest-asyncio = "1.5.6"
networkx = "2.8.7"
nodeenv = "1.7.0"
notebook-shim = "0.2.0"
notebook = "6.5.1"
numpy = "1.23.4"
oandapyV20 = "0.6.3"
oauthlib = "3.2.2"
onetimepass = "1.0.1"
openpyxl = "3.0.10"
osqp = "0.6.2.post5"
packaging = "21.3"
pandas-datareader = "0.10.0"
pandas-market-calendars = "3.2"
pandas-ta = "0.3.14b"
pandas = "1.5.1"
pandocfilters = "1.5.0"
papermill = "^2.4.0"
parso = "0.8.3"
pathspec = "0.10.1"
patsy = "0.5.3"
pbr = "5.11.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "9.2.0"
platformdirs = "2.5.2"
plotly = "5.10.0"
pluggy = "1.0.0"
praw = "7.6.0"
prawcore = "2.3.0"
pre-commit = "2.20.0"
prometheus-client = "0.15.0"
prompt-toolkit = "3.0.31"
property-cached = "1.6.4"
protobuf = "3.20.3"
psaw = "0.0.12"
psutil = "5.9.3"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pyally = "1.1.2"
pyarrow = "9.0.0"
pycares = "4.2.2"
pycodestyle = "2.7.0"
pycoingecko = "2.3.0"
pycparser = "2.21"
pydantic = "1.8.2"
pydeck = "0.8.0b4"
pyerfa = "2.0.0.1"
pyEX = "0.5.0"
pyflakes = "2.3.1"
Pygments = "2.13.0"
pyhdfe = "0.1.0"
pylint = "2.15.2"
pyluach = "2.0.2"
PyMeeus = "0.5.11"
pymongo = "3.12.3"
Pympler = "1.0.1"
pyobjc-core = "8.5.1"
pyobjc-framework-Cocoa = "8.5.1"
pyotp = "2.7.0"
pyparsing = "3.0.9"
pyportfolioopt = "1.5.2"
PyPrind = "2.11.3"
pyrsistent = "0.18.1"
pytest-cov = "3.0.0"
pytest-mock = "3.10.0"
pytest-recording = "0.12.1"
pytest = "6.2.5"
pythclient = "0.1.2"
python-binance = "1.0.16"
python-coinmarketcap = "0.2"
python-dateutil = "2.8.2"
python-dotenv = "0.19.2"
python-i18n = "0.3.9"
pytrends = "4.8.0"
pytz-deprecation-shim = "0.1.0.post0"
pytz = "2022.5"
pyupgrade = "2.38.4"
PyYAML = "6.0"
pyzmq = "24.0.1"
qdldl = "0.1.5.post2"
qtconsole = "5.3.2"
QtPy = "2.2.1"
Quandl = "3.7.0"
rapidfuzz = "1.9.1"
regex = "2022.3.2"
reportlab = "3.6.11"
requests-oauthlib = "1.3.1"
requests = "2.28.1"
rfc3986 = "1.5.0"
rich = "12.6.0"
Riskfolio-Lib = "3.3.0"
robin-stocks = "2.1.0"
"ruamel.yaml.clib" = "0.2.7"
"ruamel.yaml" = "0.17.21"
scikit-learn = "1.1.2"
scipy = "1.8.1"
screeninfo = "0.6.7"
scs = "3.2.0"
seaborn = "0.11.2"
semver = "2.13.0"
Send2Trash = "1.8.0"
sentiment-investor = "2.1.0"
setuptools-scm = "6.4.2"
sgmllib3k = "1.0.0"
six = "1.16.0"
smmap = "5.0.0"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
socketIO-client-nexus = "0.7.6"
soupsieve = "2.3.2.post1"
Sphinx = "4.5.0"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "2.0.0"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.5"
squarify = "0.4.3"
sseclient = "0.0.27"
stack-data = "0.5.1"
statsmodels = "0.13.2"
stevedore = "4.1.0"
stocksera = "0.1.21"
streamlit = "1.13.0"
tabulate = "0.9.0"
temporal-cache = "0.1.4"
tenacity = "8.1.0"
terminado = "0.16.0"
thepassiveinvestor = "1.0.10"
threadpoolctl = "3.1.0"
tinycss2 = "1.2.1"
tokenize-rt = "4.2.1"
tokenterminal = "1.0.1"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.11.5"
toolz = "0.12.0"
torch = "1.11.0"
tornado = "6.2"
tqdm = "4.64.1"
tradingview-ta = "3.3.0"
traitlets = "5.5.0"
types-python-dateutil = "2.8.19.2"
types-pytz = "2021.3.8"
types-PyYAML = "6.0.12"
types-requests = "2.28.11.2"
types-setuptools = "57.4.18"
types-six = "1.16.21"
types-urllib3 = "1.26.25.1"
typing-extensions = "4.4.0"
tzdata = "2022.5"
tzlocal = "4.2"
ujson = "5.5.0"
Unidecode = "1.3.6"
update-checker = "0.18.0"
urllib3 = "1.26.12"
user-agent = "0.1.10"
vaderSentiment = "3.3.2"
validators = "0.20.0"
valinvest = "0.0.2"
vcrpy = "4.2.1"
virtualenv = "20.16.5"
voila = "0.3.6"
watchdog = "2.1.9"
wcwidth = "0.2.5"
webencodings = "0.5.1"
websocket-client = "1.4.1"
websockets = "10.3"
widgetsnbextension = "3.6.1"
win32-setctime = "1.1.0"
wrapt = "1.14.1"
XlsxWriter = "3.0.3"
yarl = "1.8.1"
yfinance = "0.1.74"
zipp = "3.10.0"
"zope.interface" = "5.5.0"
dotenv = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
